<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.nikodoko.javaimports</groupId>
  <artifactId>javaimports-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.4</version>

  <modules>
    <module>core</module>
  </modules>

  <name>Javaimports Parent</name>

  <description>
    A tool that updates Java source code import lines, adding missing ones.
  </description>

  <url>https://github.com/nicolascouvrat/javaimports</url>

  <scm>
    <url>http://github.com/nicolascouvrat/javaimports</url>
    <connection>scm:git:git://github.com/nicolascouvrat/javaimports</connection>
    <developerConnection>scm:git:ssh://git@github.com/nicolascouvrat/javaimports.git</developerConnection>
    <tag>javaimports-parent-1.4</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <guava.version>31.1-jre</guava.version>
    <truth.version>1.0.1</truth.version>
    <googlejavaformat.version>1.15.0</googlejavaformat.version>
    <junit5.version>5.6.2</junit5.version>
    <jqwik.version>1.3.1</jqwik.version>
    <javapackagetest.version>1.0</javapackagetest.version>
    <mavencore.version>3.6.3</mavencore.version>
    <gitcommitidplugin.version>4.0.2</gitcommitidplugin.version>
    <graalvm.version>21.1.0</graalvm.version>
    <dogstatsd.version>4.0.0</dogstatsd.version>
    <opentracing.version>0.32.0</opentracing.version>
    <dd-trace-java.version>0.101.0</dd-trace-java.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Maven Core -->
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${mavencore.version}</version>
      </dependency>
      <!-- Google Guava -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <!-- Google java format -->
      <dependency>
        <groupId>com.google.googlejavaformat</groupId>
        <artifactId>google-java-format</artifactId>
        <version>${googlejavaformat.version}</version>
      </dependency>
      <dependency>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>${gitcommitidplugin.version}</version>
      </dependency>
      <!-- Telemetry -->
      <dependency>
        <groupId>com.datadoghq</groupId>
        <artifactId>java-dogstatsd-client</artifactId>
        <version>${dogstatsd.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-api</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-util</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-noop</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>com.datadoghq</groupId>
        <artifactId>dd-trace-api</artifactId>
        <version>${dd-trace-java.version}</version>
      </dependency>
      <dependency>
        <groupId>com.datadoghq</groupId>
        <artifactId>dd-trace-ot</artifactId>
        <version>${dd-trace-java.version}</version>
      </dependency>
      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit5.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit5.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.truth</groupId>
        <artifactId>truth</artifactId>
        <version>${truth.version}</version>
      </dependency>
      <dependency>
        <groupId>net.jqwik</groupId>
        <artifactId>jqwik</artifactId>
        <version>${jqwik.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.truth.extensions</groupId>
        <artifactId>truth-java8-extension</artifactId>
        <version>${truth.version}</version>
      </dependency>
      <dependency>
        <groupId>com.nikodoko.javapackagetest</groupId>
        <artifactId>javapackagetest</artifactId>
        <version>${javapackagetest.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M4</version>
          <configuration>
            <argLine>
              --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
              --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.0.0-M4</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
          <additionalOptions>-Xdoclint:none</additionalOptions>
          <additionalJOption>-Xdoclint:none</additionalJOption>
          <source>${java.version}</source>
          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
          <links>
            <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
          </links>
          <additionalJOptions>
            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED,com.google.googlejavaformat</additionalJOption>
          </additionalJOptions>
        </configuration>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>native-image</id>
      <modules>
        <module>core</module>
        <module>native-image</module>
      </modules>
      <properties>
        <skip.unit.tests>true</skip.unit.tests>
        <skip.compile>false</skip.compile>
      </properties>
    </profile>
  </profiles>
</project>
